[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
dotenv = "0.15.0"
futures = "0.3.21"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["uuid", "runtime-actix-rustls", "postgres"] }
thiserror = "1.0.31"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
assert-json-diff = "2.0.1"
